--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,41 +30,18 @@ jobs:
           run: | 
             docker build -t ${{ secrets.ARTIFACT_REGISTRY }}/spotmusic-frontend:latest .
             docker push ${{ secrets.ARTIFACT_REGISTRY }}/spotmusic-frontend:latest
-#  Deploy:
-#     needs: Build
-#     runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout Repo
-#         uses: actions/checkout@v2
+    Deploy:
+      needs: Build
+      runs-on: ubuntu-latest
+      steps:
+        - id: 'auth'
+          uses: 'google-github-actions/auth@v0'
+          with:
+            credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
 
-#       - name: Auth GCP AppEngine
-#         env:
-#           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-#         uses: 'google-github-actions/auth@v0'
-#         with:
-#           credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
-
-#       - name: Deploy to App Engine
-#         id: appengine
-#         env: 
-#           ARTIFACT_REGISTRY: ${{ secrets.ARTIFACT_REGISTRY }}
-#         uses: 'google-github-actions/deploy-appengine@v0'
-#         with:
-#           image_url: ${{ secrets.ARTIFACT_REGISTRY }}/spotmusic:latest
-
-#       - name: Prod Test
-#         run: 'curl "${{ steps.appengine.outputs.url }}"'
-# 
-
-      # - name: Deploy to Cloud Run
-      #   id: deploy
-      #   uses: google-github-actions/deploy-cloudrun@v0
-      #   with:
-      #     service: ${{ env.SERVICE }}
-      #     region: ${{ env.REGION }}
-      #     # NOTE: If using a pre-built image, update the image name here
-      #     image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}
-      # # If required, use the Cloud Run url output in later steps
-      # - name: Show Output
-      #   run: echo ${{ steps.deploy.outputs.url }}
+        - name: 'Deploy to Cloud Run'
+          uses: 'google-github-actions/deploy-cloudrun@v0'
+          with:
+            image: '${{ secrets.ARTIFACT_REGISTRY }}/spotmusic-frontend:latest'
+            service: 'spotmusic-frontend'
